tests/new_bad_arity.stderr
tests/new_bad_arity.sl:57:65: error: call arity mismatch
